force-app/main/default/objects/Finish__c/Finish__c.object-meta.xml
<CustomObject>
    <label>Finish</label>
    <nameField>
        <label>Finish</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Finish</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>