force-app/main/default/objects/Finish__c/fields/Finish_Code__c.field-meta.xml
<CustomField>
    <fullName>Finish_Code__c</fullName>
    <label>Finish Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>