force-app/main/default/objects/Finish__c/fields/Finish_Group__c.field-meta.xml
<CustomField>
    <fullName>Finish_Group__c</fullName>
    <label>Finish Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BLACK</fullName>
            </value>
            <value>
                <fullName>BRASS</fullName>
            </value>
            <value>
                <fullName>BRONZE</fullName>
            </value>
            <value>
                <fullName>COLORS</fullName>
            </value>
            <value>
                <fullName>COPPER</fullName>
            </value>
            <value>
                <fullName>GOLD</fullName>
            </value>
            <value>
                <fullName>HAND_PAINT</fullName>
            </value>
            <value>
                <fullName>METALIC</fullName>
            </value>
            <value>
                <fullName>NATURALS</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>SILVER</fullName>
            </value>
            <value>
                <fullName>STONE</fullName>
            </value>
            <value>
                <fullName>WHITE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>