force-app/main/default/objects/Finish__c/fields/Finish_Tailcode__c.field-meta.xml
<CustomField>
    <fullName>Finish_Tailcode__c</fullName>
    <label>Finish Tailcode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>