force-app/main/default/objects/Finish__c/fields/Loadnotes__c.field-meta.xml
<CustomField>
    <fullName>Loadnotes__c</fullName>
    <label>Loadnotes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>