force-app/main/default/objects/Finish__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Finish_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>